@@ -1,3 +1,8 @@
+2004-04-03  Christian Schaller <Uraeus@gnome.org>
+
+	* gst-plugins.spec.in:
+	Change names of plugins to actually be correct. Try to keep things		alphabetical to avoid getting beat up by Thomas
+
 2004-03-03  Julien MOUTTE <julien@moutte.net>
 
 	* gst-libs/gst/gconf/gconf.c: (gst_gconf_get_default_video_sink):
